gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TraineeDeletionException.java
package com.example.gymcrm.api.rest.error.exception;

public class TraineeDeletionException extends RuntimeException {
    public TraineeDeletionException(String message) {
        super(message);
    }
}
